@@ -1,3 +1,9 @@
+2002-10-03  Ulrich Drepper  <drepper@redhat.com>
+
+	* libio/freopen.c: Don't re-set _wide_data element if the stream
+	is of old style which didn't have the element.
+	* libio/freopen64.c: Likewise.
+
 2002-10-02  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/x86_64/Dist: Add bits/utmpx.h.
